css fixes/fonts added

--- a/storefont-child/style.css
+++ b/storefont-child/style.css
@@ -10,3 +10,42 @@
  Tags:         responsive-layout
  Text Domain:  storefront-child
 */
+
+html,body{
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, .alpha{
+  font-weight: bold;
+}
+
+.hentry .entry-header h1{
+  border-bottom:none;
+}
+
+a:focus {
+  outline: none;
+  }
+
+/* Site Header Styles */
+.site-title a{
+  font-family: 'Damion', cursive;
+  font-size:3em;
+}
+
+.site-search{
+  margin-top:25px;
+}
+
+.site-header-cart{
+  display:none;
+}
+
+/* General Styles */
+.entry-header{
+  text-align:center;
+}
